--- a/src/app/services/art/Header.css
+++ b/src/app/services/art/Header.css
@@ -53,12 +53,12 @@
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 451px) and (max-width: 768px) {
     .Header_art{
-        height: 38vh;
+        height: 30rem;
         width: 100vw;
         /* overflow-y: visible; */
-        margin-top: 25%;
+        margin-top: 9rem;
  
     }
 
@@ -74,10 +74,28 @@
 
     .Header_center_art > h2 {
    
-        font-size: 350%;
+        font-size: 2.8rem;
    
     
     }
+
+
+}
+
+@media screen and (max-width: 450px) {
+
+    .Header_art{
+        height: 25rem;
+        margin-top:4.5rem;
+    }
+
+    .Header_center_art > h2 {
+   
+        font-size: 2.3rem;
+   
+    
+    }
+ 
 
 }
 
