--- a/src/app/components/OurStory.css
+++ b/src/app/components/OurStory.css
@@ -5,7 +5,7 @@
     display:flex;
     max-width: 65vw;
     scroll-margin-top: 10rem;
-    margin-top:5%;
+    margin-top:5rem;
 
 
 }
@@ -56,83 +56,79 @@
     
   }
 
+  .A{
+display: none;
+    
+    
+  }
+
 
   @media screen and (max-width: 768px) {
 
-    .Story{
-        margin-top:17%;
+    .Services > h1 {
 
-    }
+      font-size: 1.8rem;
+  
+  }
 
-    .Story > h1 {
-        text-align: center;
-        font-size: 390%;
-        max-width: 80vw;
+  .About_components1 {
 
-        /* max-width: 80vw; */
+    display:flex;
+    flex-direction: column-reverse;
+    max-width: 80vw;
+    scroll-margin-top: 10rem;
+    margin-top:4rem;
 
-
-    }
-
-    .Services_leftside1  {
-        flex: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        /* border: solid red; */
-    
-      }
-    .Services_components3 {
-        display:flex;
-        flex-direction: column;
-        margin-top:15%;
-        position: relative;
-        left: 0px;
-        max-width: 80vw;
-
-    }
-
-    .Services_leftside1 > h1 {
-   
-        font-size: 350%;
-        color: rgb(48, 45, 45);
-        line-height: 1;
-        font-weight: 600;
-        text-align: center;
-        letter-spacing: 0.02em;
-        
-        /* margin-bottom: 8%; */
-       
-    }
-
-    .Services_leftside1 > p {
-  font-size: 185%;
-          font-weight: 400;
-          text-align: justify;
-          text-transform: capitalize;
-          color: black;
-          margin-top:10%;
-
-          /* border: solid red; */
-          /* max-width: 150%; */
-      }
-
-
-.Services_rightside3{
-
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* border: solid green; */
 
 }
+
+.About_leftside1  {
+
+  display:flex;
+  flex-direction: column-reverse;
+  justify-content:  center;
+  /* border: solid red; */
+}
+.About_leftside1 > p {
+ 
+  font-size: 1.25rem;
+  font-weight: 400;
+  color: black;
+  text-align: justify;
+  letter-spacing: 0em;
+  line-height: 1.7;
+  margin-top:4rem;
+
+
+}
+
+.About_leftside1 img {
+display: none;
+float: none;
+  
+}
+/* .About_leftside1 img + p + p + img{
+  display: flex;
+  height : 30vh;
+  width: 30vw;
+  
+  margin-left: 0px;
+  object-fit: contain;
+  margin-top: 0px;
       
-    .Services_rightside3 img {
-        height: 60vh;
-        width: 100vw;
-        /* padding: 2rem; */
-        margin-top: 30px;
-      }
+    } */
+    .A{
+      display: flex;
+       align-self: center;
+
+          
+          
+        }
+        .A img {
+          
+          height : 300px;
+          width: 400px;
+          object-fit: contain;
+              
+            }
 }
