--- a/src/app/components/Our_Services.css
+++ b/src/app/components/Our_Services.css
@@ -5,7 +5,7 @@
     display:flex;
     align-items:center;
     justify-content: center;
-    margin-top:5%;
+    margin-top:6rem;
     flex-direction: column;
     /* max-width: 65vw; */
 
@@ -30,7 +30,7 @@
     justify-content: center; */
     max-width: 65vw;
     scroll-margin-top: 10rem;
-    margin-top:5%;
+    margin-top:4rem;
 }
 
 .article {
@@ -83,21 +83,19 @@ align-self: flex-end;
   @media screen and (max-width: 768px) {
 
     .Services{
-      margin-top:20%;
+      margin-top:5rem;
+      
   }
 
   .Services > h1 {
 
-    font-size: 350%;
- 
+    font-size: 1.8rem;
 
 }
 
   .Services_components {
 
-    display:flex;
-    flex-direction: column;
-    margin-top:55px;
+    margin-top:3.5rem;
     max-width: 80vw;
 
     /* border: solid red; */
@@ -105,67 +103,40 @@ align-self: flex-end;
 
 .p {
 
-  display: flex; 
-  font-size: 185%;
+  font-size: 1.25rem;
   font-weight: 400;
-  text-transform:capitalize;
   color: black;
   text-align: justify;
+  letter-spacing: 0em;
+  line-height: 1.7;
 
 
 
 }
 
+.p1 {
 
-
-}
-
-
-/* .custom__button1 {
-  background-color: rgb(180, 143, 48);
-    color: white;
-    font-weight: 500;
-    letter-spacing: 0.03em;
-    line-height: 28px;
-    font-size: 24px;
-    padding: 0.5rem 1.5rem;
-    border-radius: 1px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    margin-top:8%;
-}
-
-
-
-.Services_leftside1  {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-
-}
-
-.Services_leftside1 > h1 {
- 
-  font-size: 350%;
-  color: rgb(48, 45, 45);
-  line-height: 1;
-  font-weight: 600;
-  text-align: left;
-  letter-spacing: 0.02em;
-  margin-bottom: 8%;
- 
- 
-}
-
-
-
-.Services_leftside1 > p {
-font-size: 175%;
+  margin-top: 15px;
+  font-size: 1.1rem;
   font-weight: 400;
-  text-align: justify;
-  text-transform: capitalize;
   color: black;
-} */
+  line-height: 30px;
+  font-style: italic;
+  max-width: 15rem;
+}
+
+.p2 {
+
+  font-size: 1rem;
+  font-weight: 300;
+  color: black;
+  line-height: 30px;
+  font-style: italic;
+
+}
+
+
+
+}
+
+
