--- a/src/app/restaurant_page/Our_Services_Design.css
+++ b/src/app/restaurant_page/Our_Services_Design.css
@@ -15,20 +15,19 @@
 
 
 
-.Design > h1 {
 
-  font-size: 2rem;
+.Design > h1 {
+  
+  font-size: 1.7rem;
   color: rgb(180, 143, 48);;
   line-height: 1.7;
   font-weight: 550;
-  letter-spacing: 0.03em;
-  text-transform: capitalize;
+  letter-spacing: 0.02em;
+  text-transform: none;
   text-align: center;
   /* line-height: 3rem; */
-  max-width: 60rem;
-
+  max-width: 80vw;
 }
-
 
 
 .Design_components {
@@ -38,40 +37,36 @@
   justify-content: center;
   /* max-width: 90vw; */
   scroll-margin-top: 10rem;
-  margin-top:5rem;
+  margin-top:0rem;
   flex-direction: column;
   /* border: solid red; */
 
 }
 
+
 .Design_components > h1{
 
-  font-size: 2.8rem;
+  font-size: 2.7rem;
   color: rgb(180, 143, 48);;
   line-height: 1;
   font-weight: 550;
   letter-spacing: 0.02em;
+  margin-top: 4rem;
 
 }
 
 .Design_components > h2{
 
-  font-size: 2.4rem;
+  font-size: 2.3rem;
   color: black;
   line-height: 1;
   font-weight: 450;
   letter-spacing: 0.01em;
-  margin-top:6rem;
+  margin-top:4rem;
   
   }
 
-.mt  {
-margin-top:7%;
-}
 
-.mt1  {
-margin-top:7%;
-}
 
 
 @media screen and (max-width: 768px) {
@@ -83,13 +78,13 @@ margin-top:7%;
 
 .Design > h1 {
 
-  font-size: 185%;
-  
-  text-transform: capitalize;
-  text-align: justify;
-  line-height: 1.5;
-  padding: 2rem;
-  letter-spacing: 0.00em;
+  font-size: 1.5rem;
+  color: rgb(180, 143, 48);;
+  line-height: 1.7;
+  font-weight: 550;
+  letter-spacing: 0.02em;
+  text-transform: none;
+  text-align: center;
 
   /* max-width: 80vw; */
 
@@ -100,7 +95,7 @@ margin-top:7%;
 
 display:flex;
 flex-direction: column;
-margin-top:-8%;
+margin-top:0rem;
 justify-content: center;
 align-items: center;
 text-align: center;
@@ -109,30 +104,27 @@ text-align: center;
     /* max-width: 80vw; */
 }
 
+
+
 .Design_components > h1{
 
-font-size: 350%;
-color: rgb(180, 143, 48);;
-line-height: 1;
-font-weight: 550;
-letter-spacing: 0.03em;
-margin-top:15%;
-max-width: 100vw;
-/* border: solid red; */
-/* margin: 1rem; */
-
-      /* max-width: 80vw; */
+  font-size: 2.3rem;
+  color: rgb(180, 143, 48);;
+  line-height: 1;
+  font-weight: 550;
+  letter-spacing: 0.02em;
+  margin-top: 4rem;
 
 }
 
 .Design_components > h2{
 
-  font-size: 3rem;
+  font-size: 2rem;
   color: black;
   line-height: 1;
   font-weight: 450;
-  letter-spacing: 0.02em;
-  margin-top:15%;
+  letter-spacing: 0.01em;
+  margin-top:4rem;
   
   }
 }
