--- a/src/app/services/art/Our_Services_Art.css
+++ b/src/app/services/art/Our_Services_Art.css
@@ -4,7 +4,7 @@
     align-items:center;
     justify-content: center;
     /* border: solid green; */
-    margin-top:5%;
+    margin-top:5rem;
     flex-direction: column;
     width: 100vw;
     /* border: solid red; */
@@ -16,16 +16,16 @@
 
 .Art > h1 {
   
-    font-size: 2rem;
+    font-size: 1.7rem;
     color: rgb(180, 143, 48);;
     line-height: 1.7;
     font-weight: 550;
-    letter-spacing: 0.03em;
-    text-transform: capitalize;
+    letter-spacing: 0.02em;
+    text-transform: none;
     text-align: center;
     /* line-height: 3rem; */
-    max-width: 60rem;
-}
+    max-width: 80vw;
+  }
 
 
 
@@ -36,7 +36,7 @@
     justify-content: center;
     /* max-width: 90vw; */
     scroll-margin-top: 10rem;
-    margin-top:5%;
+    margin-top:5rem;
     flex-direction: column;
     /* border: solid red; */
 
@@ -49,6 +49,9 @@
   line-height: 1;
   font-weight: 550;
   letter-spacing: 0.02em;
+  margin-bottom: 1.5rem;
+
+  /* margin-top:3rem; */
 
 }
 
@@ -68,20 +71,14 @@
   @media screen and (max-width: 768px) {
     .Art{
       width: 100vw;
-      margin-top:10%;
+      margin-top:5rem;
             
   }
 
   .Art > h1 {
   
-    font-size: 185%;
-    text-transform: capitalize;
-    text-align: justify;
-    line-height: 1.5;
-    padding: 2rem;
-    letter-spacing: 0.00em;
-
-    /* max-width: 80vw; */
+    font-size: 1.4rem;
+    margin-bottom:4rem;
 
 
   }
@@ -90,7 +87,7 @@
 
   display:flex;
 flex-direction: column;
-  margin-top:-8%;
+  margin-top:0rem;
   text-align: center;
 
     /* border: solid red; */
@@ -100,20 +97,36 @@ flex-direction: column;
 
 .Art_components > h1{
 
-  font-size: 350%;
+  font-size: 2rem;
   color: rgb(180, 143, 48);;
   line-height: 1;
   font-weight: 550;
   letter-spacing: 0.03em;
-  margin-top:15%;
-  max-width: 100vw;
+  margin-bottom: 0rem;
+
 
 }
 
 .mt  {
-  max-width: 100vw;
+  margin-top:4rem;
 }
+
 
 
   }
 
+  @media screen and (max-width: 450px) {
+    .Art > h1 {
+  
+      font-size: 1.1rem;
+      color: rgb(180, 143, 48);;
+      line-height: 1.7;
+      font-weight: 550;
+      letter-spacing: 0.02em;
+      text-transform: none;
+      text-align: center;
+      /* line-height: 3rem; */
+      max-width: 80vw;
+    }
+  
+  }
