--- a/src/app/services/art/Our_Services_Art.css
+++ b/src/app/services/art/Our_Services_Art.css
@@ -1,31 +1,38 @@
-.Art{
+/* .Art{
 
     display:flex;
     align-items:center;
     justify-content: center;
-    /* border: solid green; */
     margin-top:5rem;
     flex-direction: column;
     width: 100vw;
-    /* border: solid red; */
 
     
+} */
+
+.Services{
+
+  display:flex;
+  align-items:center;
+  justify-content: center;
+  margin-top:3.5rem;
+  flex-direction: column;
+  /* border: solid red; */
+  /* width: 100vw; */
+
+  /* max-width: 65vw; */
+
 }
 
+.Services > h1 {
 
-
-.Art > h1 {
-  
-    font-size: 1.7rem;
-    color: rgb(180, 143, 48);;
-    line-height: 1.7;
-    font-weight: 550;
-    letter-spacing: 0.02em;
-    text-transform: none;
-    text-align: center;
-    /* line-height: 3rem; */
-    max-width: 80vw;
-  }
+  /* font-size: 450%; */
+  font-size: 2.7rem;
+  color: rgb(180, 143, 48);;
+  line-height: 1;
+  font-weight: 550;
+  letter-spacing: 0.02em;
+}
 
 
 
@@ -58,15 +65,6 @@
 .mt  {
   margin-top:6rem;
 }
-
-
-
-/* .mt2{
-  margin-top:5%;
-  } */
-
-
-
 
   @media screen and (max-width: 768px) {
     .Art{
