--- a/src/app/page.css
+++ b/src/app/page.css
@@ -17,3 +17,12 @@
     width:100vw;
     font-size: 62.5%;
   }
+
+  body{
+    font-size:16px;
+    background: #fff;
+    overflow-x:hidden;
+    font-family: poppins;
+    
+  
+  }
