--- a/src/app/services/art/Gallery.css
+++ b/src/app/services/art/Gallery.css
@@ -32,8 +32,9 @@
     display: flex;
     flex-direction: row;
     max-width: 100%;
-    position: relative;
+    /* position: relative; */
     /* border: solid green; */
+
 }
 
 .app__gallery {
@@ -42,7 +43,8 @@
     width: max-content;
     overflow-x: scroll;
     -ms-overflow-style: none;
-    scrollbar-width: none;  
+    scrollbar-width: none;
+  
 }
 
 
@@ -51,23 +53,26 @@
 }
 
 .app__gallery-images {
-    position: relative;
+    /* position: relative; */
     /* min-width: 30%;
     height: 85%; */
-    min-width: 25rem;
-    height: 33rem;
-    margin-right: 2rem;
+    min-width: 35rem;
+    max-height: 40rem;
+    /* margin-right: 0rem; */
+    margin-left: 2rem;
+
 }
 
 
 
 .app__gallery-images img {
-    width: 100%;
-    height: 100%;
+    /* min-width: 100%;
+    height: 100%; */
+    max-height: 40rem;
     object-fit: cover;
+    /* padding: 1rem; */
     opacity: 1;
     transition: .5s ease;
-    /* border: solid red; */
 }
 
 .app__gallery-images:hover img {
