--- a/src/app/services/art/Gallery.css
+++ b/src/app/services/art/Gallery.css
@@ -1,25 +1,18 @@
 
-.Gallery_design{
-
-    display:flex;
-    align-items:center;
-    justify-content: center;
-    /* margin-top:5%; */
-    flex-direction: column;
-    
-    
-}
-
-
 .Gallery_components_design {
 
-    display:flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content: center;
-    max-width: 80vw;
+    /* max-width: 80vw; */
     scroll-margin-top: 10rem;
-    /* border: solid green; */
+    /* border: solid yellow; */
+    /* overflow-x: hidden; */
+    /* display: flex;
+    flex-direction: column-reverse; */
+
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: row;
+    width: 80vw;
+    border: solid green;
 
 }
 
@@ -27,54 +20,57 @@
 
 
 .Gallery_Down_design {
-    margin-top: 4rem;
-    /* flex: 1; */
-    display: flex;
-    flex-direction: row;
-    max-width: 100%;
-    /* position: relative; */
-    /* border: solid green; */
 
-}
-
-.app__gallery {
     display: flex;
-    flex-direction: row;
-    width: max-content;
+    align-items: center;
+    justify-content: center;
     overflow-x: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
-  
+    /* min-width: fit-content; */
+    width: max-content;
 }
 
+.app__gallery {
 
-.app__gallery::-webkit-scrollbar {
-    display: none;
+display: flex;
+margin-left: 2rem;
+min-width: 30rem;
+max-height: 35rem;
 }
+
 
 .app__gallery-images {
-    /* position: relative; */
-    /* min-width: 30%;
-    height: 85%; */
-    min-width: 35rem;
-    max-height: 40rem;
-    /* margin-right: 0rem; */
-    margin-left: 2rem;
 
+    /* width: 30rem; */
+    /* max-height: 35rem; */
+
+    /* margin-left: 2rem;
+    scroll-snap-align: start;
+    min-width: 30rem;
+    max-height: 35rem; */
+    /* width: max-content; */
 }
 
 
-
+/*if I put heigh 100% it will allow the image to take its full height within the
+upper container that has a max height of 35 rem which means it will scroll
+up and down to see the image, we dont want that*/
 .app__gallery-images img {
-    /* min-width: 100%;
-    height: 100%; */
-    max-height: 40rem;
+
+    max-height: 35rem;
+
+    /* width: max-content; */
+    min-width: 30rem;
+    /* width: 100%; */
+    /* height: 100%; */
     object-fit: cover;
-    /* padding: 1rem; */
     opacity: 1;
     transition: .5s ease;
 }
-
+.app__gallery::-webkit-scrollbar {
+    display: none;
+}
 .app__gallery-images:hover img {
     opacity: .35;
 }
@@ -84,21 +80,16 @@
 }
 
 .app__gallery_arrows {
-    /* border: solid blue; */
 
-    width: 90rem;
-    max-width: 90vw;
-    min-width: 80vw;
-    /* margin-left: 1rem;
-    margin-right: 1rem; */
+    /* width: 90rem; */
+    /* min-width: 95vw; */
+    /* min-width: 80vw; */
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: absolute;
     margin-top: 6rem;
-    /* margin-left: 1vw;
-    margin-right: 1vw; */
-
+    /* border: solid blue; */
 }
 
 .gallery_arrow-icon {
@@ -139,22 +130,19 @@
 }
 
 .app__gallery-images {
-    position: relative;
-    min-width: 75vw;
+    /* position: relative; */
+    min-width: 100vw;
 
     height:auto;
-    margin-right: 0rem;
-
-        /* border: solid red; */
-        padding: 1rem;
-        /* padding-left: 1.5rem;
-        padding-right: 1.5rem; */
+    margin-left: 0rem;
 }
 
 
 .app__gallery-images img {
 
     object-fit:contain;
+    padding: 0.5rem;
+
 }
 
 .app__gallery_arrows {
@@ -168,16 +156,31 @@
 }
 
 @media screen and (max-width: 450px) {
+
+
+
+    
     .app__gallery-images {
-        position: relative;
+        /* position: relative; */
         min-width: 100vw;
     
         height:auto;
-        margin-right: 0rem;
+        margin-left: 0rem;
     
             /* border: solid red; */
-            padding: 1rem;
+            padding: 0rem;
             /* padding-left: 1.5rem;
             padding-right: 1.5rem; */
     }
+
+    .app__gallery-images img {
+        /* min-width: 100%;
+        height: 100%; */
+        max-height: 40rem;
+        object-fit: cover;
+        /* padding: 1rem; */
+        opacity: 1;
+        transition: .5s ease;
+    }
+    
 }
