--- a/src/app/restaurant_page/Our_Services_Design.css
+++ b/src/app/restaurant_page/Our_Services_Design.css
@@ -129,3 +129,32 @@ text-align: center;
   }
 }
 
+@media screen and (max-width: 450px) {
+  .Design > h1 {
+
+    font-size: 1.25rem;
+    color: rgb(180, 143, 48);;
+    line-height: 1.7;
+    font-weight: 550;
+    letter-spacing: 0.02em;
+    text-transform: none;
+    text-align: center;
+    /* line-height: 3rem; */
+    max-width: 80vw;
+  }
+
+  .Design_components > h1{
+
+
+    margin-top: 2rem;
+  
+  }
+  
+  .Design_components > h2{
+  
+
+    margin-top:2rem;
+    
+    }
+
+}
