--- a/src/app/services/art/Gallery.css
+++ b/src/app/services/art/Gallery.css
@@ -28,10 +28,11 @@
 
 .app__gallery-images {
 
-    margin-right: 2rem;
+    /* margin-right: -10rem; */
+    margin-left:2rem;
     scroll-snap-align: start;
-    min-width: 40rem;
-    max-height: 35rem;
+    min-width: 45rem;
+    max-height: 40rem;
 }
 
 
@@ -40,11 +41,15 @@ upper container that has a max height of 35 rem which means it will scroll
 up and down to see the image, we dont want that*/
 .app__gallery-images img {
 
-    max-height: 35rem;
-    min-width: 40rem;
+    max-height: 40rem;
+    min-width: 45rem;
     object-fit: cover;
     opacity: 1;
     transition: .5s ease;
+    /* padding-left: 5rem;
+    padding-right: 5rem; */
+    /* margin-left: 10rem; */
+
 }
 .app__gallery::-webkit-scrollbar {
     display: none;
@@ -106,7 +111,7 @@ up and down to see the image, we dont want that*/
     .Gallery_Down_design {
 
         width: 100%;
-        margin-top: 4rem;
+        margin-top: 5rem;
 
 
     }
@@ -134,12 +139,20 @@ up and down to see the image, we dont want that*/
     min-width: 100vw;
     height: auto;
     margin-right:0rem;
-    margin-top: -7rem;   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    /* margin-top: -7rem; */
+    /* margin-bottom: 3rem;    */
 }
 
 .app__gallery-images img {
     object-fit:contain;
-    padding: 5rem;
+    padding-left: 11rem;
+    padding-right: 13rem;
+    padding-bottom: 2rem;
+
 }
 
 .app__gallery_arrows {
